src/test/ui/parser/attr-bad-meta.stderr
error: expected one of `(`, `::`, `=`, `[`, `]`, or `{`, found `*`
  --> $DIR/attr-bad-meta.rs:1:7
   |
LL | #[path*]
   |       ^ expected one of `(`, `::`, `=`, `[`, `]`, or `{` here

error: aborting due to previous error

